--- a/fluentd_image/Makefile
+++ b/fluentd_image/Makefile
@@ -12,30 +12,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# The build rule builds a Docker image that logs all Docker contains logs to
-# Google Compute Platform using the Cloud Logging API. The push rule pushes
-# the image to DockerHub.
+.PHONY:	build push
 
-# Procedure for change:
-# 1. Bump the tag number.
-# 2. Create an image for the kubernetes user on Dockerhub and push there: make kbuild kpush
-# 3. Temporarily adjust any config files etc. that reference gcr.io/google_containers/fluentd-gcp:$(TAG)
-#    to use kubernetes/fluentd-gcp:$(TAG) instead.
-# 4. Test etc.
-# 5. Issue PR.
-# 6. When PR is approved make the gcr.io version of the image: make build push
-# 7. Revert the referendes to kubernetes/fluentd-gcp:$(TAG) to gcr.io/google_containers/fluentd-gcp:$(TAG) 
+IMAGE = fluentd-elasticsearch
+TAG = 1.19
 
-.PHONY:	kbuild kpush
+build:	
+	docker build -t kubernetes-logging:$(TAG) .
 
-TAG = 1.25
-
-# Rules for building the test image for deployment to Dockerhub with user kubernetes.
-
-kbuild:
-	docker build -t kubernetes-logging/fluentd:$(TAG) .
-
-
-kpush:
-	docker push kubernetes/fluentd-gcp:$(TAG)
-
+push:	
+	gcloud docker --server=gcr.io push gcr.io/google_containers/$(IMAGE):$(TAG)
