--- a/fluentd_image/td-agent.conf
+++ b/fluentd_image/td-agent.conf
@@ -109,8 +109,8 @@
 # {"log":"[info:2016-02-16T16:04:05.930-08:00] Some log text here\n","stream":"stdout","time":"2016-02-17T00:04:05.931087621Z"}
 <source>
   type tail
-  path /var/log/containers/*.log
-  pos_file /var/log/es-containers.log.pos
+  path /var/log/containers/*/*.log
+  pos_file /var/lib/fluentd/es-containers.log.pos
   time_format %Y-%m-%dT%H:%M:%S.%NZ
   tag kubernetes.*
   format json
@@ -124,7 +124,7 @@
   format /^(?<time>[^ ]* [^ ,]*)[^\[]*\[[^\]]*\]\[(?<severity>[^ \]]*) *\] (?<message>.*)$/
   time_format %Y-%m-%d %H:%M:%S
   path /var/log/salt/minion
-  pos_file /var/log/es-salt.pos
+  pos_file /var/lib/fluentd/es-salt.pos
   tag salt
 </source>
 
@@ -134,7 +134,7 @@
   type tail
   format syslog
   path /var/log/startupscript.log
-  pos_file /var/log/es-startupscript.log.pos
+  pos_file /var/lib/fluentd/es-startupscript.log.pos
   tag startupscript
 </source>
 
@@ -146,7 +146,7 @@
   format /^time="(?<time>[^)]*)" level=(?<severity>[^ ]*) msg="(?<message>[^"]*)"( err="(?<error>[^"]*)")?( statusCode=($<status_code>\d+))?/
   time_format %Y-%m-%dT%H:%M:%S.%NZ
   path /var/log/docker.log
-  pos_file /var/log/es-docker.log.pos
+  pos_file /var/lib/fluentd/es-docker.log.pos
   tag docker
 </source>
 
@@ -158,7 +158,7 @@
   # parse out of it (like severities).
   format none
   path /var/log/etcd.log
-  pos_file /var/log/es-etcd.log.pos
+  pos_file /var/lib/fluentd/es-etcd.log.pos
   tag etcd
 </source>
 
@@ -175,7 +175,7 @@
   format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
   time_format %m%d %H:%M:%S.%N
   path /var/log/kubelet.log
-  pos_file /var/log/es-kubelet.log.pos
+  pos_file /var/lib/fluentd/es-kubelet.log.pos
   tag kubelet
 </source>
 
@@ -188,7 +188,7 @@
   format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
   time_format %m%d %H:%M:%S.%N
   path /var/log/kube-apiserver.log
-  pos_file /var/log/es-kube-apiserver.log.pos
+  pos_file /var/lib/fluentd/es-kube-apiserver.log.pos
   tag kube-apiserver
 </source>
 
@@ -201,7 +201,7 @@
   format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
   time_format %m%d %H:%M:%S.%N
   path /var/log/kube-controller-manager.log
-  pos_file /var/log/es-kube-controller-manager.log.pos
+  pos_file /var/lib/fluentd/es-kube-controller-manager.log.pos
   tag kube-controller-manager
 </source>
 
@@ -214,7 +214,7 @@
   format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
   time_format %m%d %H:%M:%S.%N
   path /var/log/kube-scheduler.log
-  pos_file /var/log/es-kube-scheduler.log.pos
+  pos_file /var/lib/fluentd/es-kube-scheduler.log.pos
   tag kube-scheduler
 </source>
 
@@ -232,7 +232,7 @@
   format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
   time_format %m%d %H:%M:%S.%N
   path /var/log/glbc.log
-  pos_file /var/log/es-glbc.log.pos
+  pos_file /var/lib/fluentd/es-glbc.log.pos
   tag glbc
 </source>
 
@@ -246,7 +246,7 @@
   format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
   time_format %m%d %H:%M:%S.%N
   path /var/log/cluster-autoscaler.log
-  pos_file /var/log/es-cluster-autoscaler.log.pos
+  pos_file /var/lib/fluentd/es-cluster-autoscaler.log.pos
   tag cluster-autoscaler
 </source>
 
