--- a/fluentd_image/td-agent.conf
+++ b/fluentd_image/td-agent.conf
@@ -109,7 +109,7 @@
 # {"log":"[info:2016-02-16T16:04:05.930-08:00] Some log text here\n","stream":"stdout","time":"2016-02-17T00:04:05.931087621Z"}
 <source>
   type tail
-  path /var/log/containers/*/*.log
+  path /var/log/containers/*.log
   pos_file /var/lib/fluentd/es-containers.log.pos
   time_format %Y-%m-%dT%H:%M:%S.%NZ
   tag kubernetes.*
@@ -218,9 +218,9 @@
   tag kube-scheduler
 </source>
 
-#<filter kubernetes.**>
-#  type kubernetes_metadata
-#</filter>
+<filter kubernetes.**>
+  type kubernetes_metadata
+</filter>
 
 # Example:
 # I0603 15:31:05.793605       6 cluster_manager.go:230] Reading config from path /etc/gce.conf
