--- a/kubernetes_config/fluentd-daemonset.yaml
+++ b/kubernetes_config/fluentd-daemonset.yaml
@@ -32,6 +32,9 @@ spec:
           readOnly: true
         - name: fluentdposfiles
           mountPath: /var/lib/fluentd
+        - name: minikubemount
+          mountPath: /mnt/sda1/var/lib/docker/containers
+          readOnly: true
       terminationGracePeriodSeconds: 30
       volumes:
       - name: varlog
@@ -39,7 +42,10 @@ spec:
           path: /var/log/
       - name: varlibdockercontainers
         hostPath:
-          path: /var/lib/docker/containers
+          path: /var/log/containers
       - name: fluentdposfiles
         hostPath:
           path: /tmp/fluentd
+      - name: minikubemount
+        hostPath: 
+          path: /mnt/sda1/var/lib/docker/containers
