--- a/kubernetes_config/fluentd_config/td-agent.conf
+++ b/kubernetes_config/fluentd_config/td-agent.conf
@@ -250,22 +250,30 @@
   tag cluster-autoscaler
 </source>
 
+#<match **>
+#   type elasticsearch
+#   log_level info
+#   include_tag_key true
+#   target_index_key kubernetes.pod_name
+#   host elasticsearch-logging
+#   port 9200
+#   logstash_format true
+#   # Set the chunk limit the same as for fluentd-gcp.
+#   buffer_chunk_limit 2M
+#   # Cap buffer memory usage to 2MiB/chunk * 32 chunks = 64 MiB
+#   buffer_queue_limit 32
+#   flush_interval 5s
+#  # Never wait longer than 5 minutes between retries.
+#  max_retry_wait 30
+#   # Disable the limit on the number of retries (retry forever).
+#   disable_retry_limit
+#   # Use multiple threads for processing.
+#   num_threads 8
+#</match>
+
 <match **>
-   type elasticsearch
-   log_level info
-   include_tag_key true
-   host elasticsearch-logging
-   port 9200
-   logstash_format true
-   # Set the chunk limit the same as for fluentd-gcp.
-   buffer_chunk_limit 2M
-   # Cap buffer memory usage to 2MiB/chunk * 32 chunks = 64 MiB
-   buffer_queue_limit 32
-   flush_interval 5s
-   # Never wait longer than 5 minutes between retries.
-   max_retry_wait 30
-   # Disable the limit on the number of retries (retry forever).
-   disable_retry_limit
-   # Use multiple threads for processing.
-   num_threads 8
+  @type elasticsearch_dynamic
+  host elasticsearch-logging
+  port 9200
+  index_name ${record['kubernetes']['pod_name']}-${Time.at(time).getutc.strftime(@logstash_dateformat)}
 </match>
