--- a/kibana-image/Dockerfile
+++ b/kibana-image/Dockerfile
@@ -15,7 +15,7 @@
 # A Dockerfile for creating a Kibana container that is designed
 # to work with Kubernetes logging.
 
-FROM java:openjdk-7-jre
+FROM java:openjdk-8-jre
 MAINTAINER Satnam Singh "satnam@google.com"
 
 ENV DEBIAN_FRONTEND noninteractive
@@ -25,9 +25,9 @@ RUN apt-get update && \
     apt-get clean
 
 RUN cd / && \
-    curl -O https://download.elastic.co/kibana/kibana/kibana-4.0.2-linux-x64.tar.gz && \
-    tar xf kibana-4.0.2-linux-x64.tar.gz && \
-    rm kibana-4.0.2-linux-x64.tar.gz
+    curl -O https://download.elastic.co/kibana/kibana/kibana-4.6.1-linux-x86_64.tar.gz && \
+    tar xf kibana-4.6.1-linux-x86_64.tar.gz && \
+    rm kibana-4.6.1-linux-x86_64.tar.gz
 
 COPY run.sh /run.sh
 
