--- a/kubernetes_config/kibana-controller.yaml
+++ b/kubernetes_config/kibana-controller.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: kibana-logging
-        image: gcr.io/google_containers/kibana:1.3
+        image: kibana:4.6.1
         env:
           - name: "ELASTICSEARCH_URL"
             value: "http://elasticsearch-logging:9200"
