--- a/kubernetes_config/kibana-controller.yaml
+++ b/kubernetes_config/kibana-controller.yaml
@@ -21,7 +21,9 @@ spec:
     spec:
       containers:
       - name: kibana-logging
-        image: kibana:4.6.1
+        #build kibana-image first to use latest version from your local image
+        #image: kibana:4.6.1
+        image: gcr.io/google_containers/kibana:1.3
         env:
           - name: "ELASTICSEARCH_URL"
             value: "http://elasticsearch-logging:9200"
