--- a/kubernetes_config/es-controller.yaml
+++ b/kubernetes_config/es-controller.yaml
@@ -1,26 +1,26 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  name: elasticsearch-logging-v1
+  name: elasticsearch-logging-v2
   namespace: kube-system
   labels:
     k8s-app: elasticsearch-logging
-    version: v1
+    version: v2
     #kubernetes.io/cluster-service: "true"
 spec:
   replicas: 2
   selector:
     k8s-app: elasticsearch-logging
-    version: v1
+    version: v2
   template:
     metadata:
       labels:
         k8s-app: elasticsearch-logging
-        version: v1
+        version: v2
         kubernetes.io/cluster-service: "true"
     spec:
       containers:
-      - image: gcr.io/google_containers/elasticsearch:1.9
+      - image: local/elasticsearch:2.4.0
         name: elasticsearch-logging         
         resources:
           # need more cpu upon initialization, therefore burstable class
