--- a/kubernetes_config/kibana-controller.yaml
+++ b/kubernetes_config/kibana-controller.yaml
@@ -1,29 +1,29 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  name: kibana-logging-v1
+  name: kibana-logging-v2
   namespace: kube-system
   labels:
     k8s-app: kibana-logging
-    version: v1
+    version: v2
     #kubernetes.io/cluster-service: "true"
 spec:
   replicas: 1
   selector:
     k8s-app: kibana-logging
-    version: v1
+    version: v2
   template:
     metadata:
       labels:
         k8s-app: kibana-logging
-        version: v1
+        version: v2
         #kubernetes.io/cluster-service: "true"
     spec:
       containers:
       - name: kibana-logging
         #build kibana-image first to use latest version from your local image
-        #image: kibana:4.6.1
-        image: gcr.io/google_containers/kibana:1.3
+        image: kibana:4.6.1
+        #image: gcr.io/google_containers/kibana:1.3
         env:
           - name: "ELASTICSEARCH_URL"
             value: "http://elasticsearch-logging:9200"
